# elaborate

elaborate/: .cvsignore  README  configure.in
elaborate/images/: Makefile.am
elaborate/src/lib/: E_Irc.h  Makefile.am  errors.h  main.c
