AC_PREREQ(2.59)
AC_INIT([Elaborate], [0.0.1], [devilhorns@devilhorns.us])
AC_CONFIG_HEADERS(config.h)
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.9 foreign])

AC_PROG_CC
AM_PROG_LIBTOOL
## AM_ENABLE_SHARED

AC_HEADER_STDC

if test "x${exec_prefix}" = "xNONE"; then
  if test "x${prefix}" = "xNONE"; then
    bindir="${ac_default_prefix}/bin";
  else
    bindir="${prefix}/bin";
  fi
else
  if test "x${prefix}" = "xNONE"; then
    bindir="${ac_default_prefix}/bin";
  else
    bindir="${prefix}/bin";
  fi
fi

if test "x${exec_prefix}" = "xNONE"; then
  if test "x${prefix}" = "xNONE"; then
    libdir="${ac_default_prefix}/lib";
  else
    libdir="${prefix}/lib";
  fi
else
  if test "x${prefix}" = "xNONE"; then
    libdir="${ac_default_prefix}/lib";
  else
    libdir="${prefix}/lib";
  fi
fi
      
dnl Set PACKAGE_DATA_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${ac_default_prefix}/share/${PACKAGE}", [Shared Data Directory])
else
  AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${prefix}/share/${PACKAGE}", [Shared Data Directory])
fi

AC_PATH_GENERIC([eet], [0.9.10], [], [AC_MSG_ERROR(Eet is not installed)],)
AC_PATH_GENERIC([evas], [0.9.9], [], [AC_MSG_ERROR(Evas is not installed)],)

AC_PATH_GENERIC([ecore], [0.9.9], 
[
 ECORE_CON_LIBS=`ecore-config --libs-con`
 ECORE_CON_CFLAGS=`ecore-config --cflags`
 AC_SUBST(ECORE_CON_LIBS)
 AC_SUBST(ECORE_CON_CFLAGS)
], 
[AC_MSG_ERROR(Ecore is not installed)],
)

AC_PATH_GENERIC([etk], [0.1.0], [], [AC_MSG_ERROR(Etk is not installed)],)

AC_OUTPUT([
Makefile
images/Makefile
src/Makefile
src/lib/Makefile
src/bin/Makefile
])
